--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
+    <!-- ✅ 加在這裡 -->
+    <link rel="icon" type="image/png" href="/EUF-logo.png" />
+
     <meta property="og:title" content="stock-insights-report-genie" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
@@ -21,6 +24,6 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-  <script type="module" src="src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
